<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 种类-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_kind"
                android:textColor="@color/T2"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/info_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/f333333"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 年龄和性别-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_age"
                    android:textColor="@color/T2"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/f333333"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_sex"
                    android:textColor="@color/T2"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/f333333"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- 简介 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_desc"
                android:textColor="@color/T2"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/info_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/f333333"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 相片-->
        <LinearLayout
            android:id="@+id/ll_info_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_pic"
                android:textColor="@color/T2"
                android:textSize="13sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_info_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
